# cc-notify

./: .gitignore  README.md  README_JA.md  README_ZH.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
cc-notify-cli/: Cargo.toml
cc-notify-cli/src/: context_builder.rs  db.rs  hooks.rs  main.rs  notify.rs
cc-notify-cli/src/notify/: channels.rs  jump.rs  message.rs  native_click.rs  types.rs
scripts/: build-cli.sh
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: cli_installer.rs  config.rs  error.rs  lib.rs  main.rs  store.rs  tray.rs
src-tauri/src/channels/: discord.rs  mod.rs  native.rs  registry.rs  slack.rs  sound.rs  teams.rs  telegram.rs  traits.rs  tray_badge.rs  voice.rs  webhook.rs
src-tauri/src/commands/: channel.rs  event_type.rs  history.rs  hooks.rs  mod.rs  notification.rs  routing.rs  rule.rs  settings.rs  template.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: channels.rs  event_types.rs  history.rs  mod.rs  routing.rs  rules.rs  settings.rs  templates.rs
src-tauri/src/hooks/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/presets/: mod.rs
src-tauri/src/services/: channel.rs  hooks_generator.rs  mod.rs  notification.rs  quiet_hours.rs  rate_limiter.rs  rule.rs  template.rs
src/components/channels/: ChannelsPage.tsx
src/components/common/: ConfirmDialog.tsx
src/components/events/: EventsPage.tsx
src/components/history/: HistoryPage.tsx
src/i18n/: index.ts
src/types/: index.ts
tests/: setupGlobals.ts  setupTests.ts
tests/api/: channels.test.ts  eventTypes.test.ts  history.test.ts  hooks.test.ts  routing.test.ts  rules.test.ts  settings.test.ts  templates.test.ts
tests/components/: ChannelsPage.test.tsx  EventsPage.test.tsx  HistoryPage.test.tsx  RulesPage.test.tsx  SettingsPage.test.tsx
tests/msw/: handlers.ts  state.ts  tauriMocks.ts
tests/query/: mutations.test.tsx  queries.test.tsx
tests/utils/: renderWithProviders.tsx
(+21 files in other folders)
