[package]
name = "cc-notify"
version = "0.2.5"
description = "Notification Manager for AI CLI Tools"
authors = ["CC-Notify Team"]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "cc_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.8.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
dirs = "5.0"
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "process"] }
thiserror = "2.0"
anyhow = "1.0"
tempfile = "3"
uuid = { version = "1.11", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }
tauri-plugin-notification = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
